// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interpreter default scripts crypto.src 1`] = `
CustomString {
  "value": "crypto",
}
`;

exports[`interpreter default scripts crypto.src 2`] = `
BasicInterface {
  "interface": Map {
    "aireplay" => [Function],
    "airmon" => [Function],
    "aircrack" => [Function],
    "decipher" => [Function],
    "smtp_user_list" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "crypto",
  },
}
`;

exports[`interpreter default scripts crypto.src 3`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts crypto.src 4`] = `
CustomString {
  "value": "start",
}
`;

exports[`interpreter default scripts crypto.src 5`] = `
CustomString {
  "value": "somefoo",
}
`;

exports[`interpreter default scripts crypto.src 6`] = `
CustomString {
  "value": "shallnotpass",
}
`;

exports[`interpreter default scripts generics.src 1`] = `
BasicInterface {
  "interface": Map {
    "fetch" => [Function],
    "read" => [Function],
    "send" => [Function],
    "delete" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "metaMail",
  },
}
`;

exports[`interpreter default scripts generics.src 2`] = `
CustomString {
  "value": "098f6bcd4621d373cade4e832627b4f6",
}
`;

exports[`interpreter default scripts generics.src 3`] = `
CustomNumber {
  "value": 1642924301240,
}
`;

exports[`interpreter default scripts generics.src 4`] = `
CustomString {
  "value": "142.567.134.56",
}
`;

exports[`interpreter default scripts generics.src 5`] = `
CustomString {
  "value": "Domain name: mytest.org
Administrative contact: Rodd Mantil
Email address: Mantil@goldm.info
Phone: 782517348",
}
`;

exports[`interpreter default scripts generics.src 6`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts generics.src 7`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts generics.src 8`] = `
CustomString {
  "value": "COMMAND",
}
`;

exports[`interpreter default scripts generics.src 9`] = `
CustomString {
  "value": "/home",
}
`;

exports[`interpreter default scripts generics.src 10`] = `
CustomString {
  "value": "/home/test",
}
`;

exports[`interpreter default scripts generics.src 11`] = `
CustomString {
  "value": "/home/test/myprogramm",
}
`;

exports[`interpreter default scripts generics.src 12`] = `
CustomString {
  "value": "test",
}
`;

exports[`interpreter default scripts generics.src 13`] = `
CustomString {
  "value": "test@test.org",
}
`;

exports[`interpreter default scripts generics.src 14`] = `
CustomString {
  "value": "qdsaibwv",
}
`;

exports[`interpreter default scripts generics.src 15`] = `
CustomString {
  "value": "test",
}
`;

exports[`interpreter default scripts generics.src 16`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts generics.src 17`] = `
CustomString {
  "value": "/home/test/myprogramm",
}
`;

exports[`interpreter default scripts ls.src 1`] = `
CustomString {
  "value": "Desktop\\\\nDownloads\\\\nConfig\\\\nack_file",
}
`;

exports[`interpreter default scripts metaxploit.src 1`] = `
CustomString {
  "value": "metaxploit",
}
`;

exports[`interpreter default scripts metaxploit.src 2`] = `
BasicInterface {
  "interface": Map {
    "load" => [Function],
    "net_use" => [Function],
    "scan" => [Function],
    "scan_address" => [Function],
    "sniffer" => [Function],
    "rshell_client" => [Function],
    "rshell_server" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "metaxploit",
  },
}
`;

exports[`interpreter default scripts metaxploit.src 3`] = `
CustomString {
  "value": "metaLib",
}
`;

exports[`interpreter default scripts metaxploit.src 4`] = `
BasicInterface {
  "interface": Map {
    "lib_name" => [Function],
    "version" => [Function],
    "overflow" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "exploits" => Array [
      Object {
        "action": 3,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "crypto",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [
          6,
          0,
        ],
        "sector": "mslubssnoe",
        "user": 1,
      },
      Object {
        "action": 2,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "crypto",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [
          0,
          2,
        ],
        "sector": "b01jydhrcf",
        "user": 0,
      },
      Object {
        "action": 1,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "crypto",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [
          3,
          5,
          2,
        ],
        "sector": "sjw2b8l8js",
        "user": 2,
      },
      Object {
        "action": 2,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "crypto",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [],
        "sector": "fw5ynq2637",
        "user": 1,
      },
      Object {
        "action": 4,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "crypto",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [
          3,
        ],
        "sector": "u19jo65mfl",
        "user": 2,
      },
      Object {
        "action": 3,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "crypto",
        "memAddress": "0x48096032",
        "remote": false,
        "required": Array [],
        "sector": "mie6bkughj",
        "user": 0,
      },
      Object {
        "action": 4,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "crypto",
        "memAddress": "0x48096032",
        "remote": false,
        "required": Array [],
        "sector": "suef4z9u65",
        "user": 0,
      },
      Object {
        "action": 0,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "crypto",
        "memAddress": "0x48096032",
        "remote": false,
        "required": Array [
          2,
        ],
        "sector": "6ddnjaivtn",
        "user": 1,
      },
    ],
    "classID" => "metaLib",
  },
}
`;

exports[`interpreter default scripts metaxploit.src 5`] = `
CustomString {
  "value": "netSession",
}
`;

exports[`interpreter default scripts metaxploit.src 6`] = `
BasicInterface {
  "interface": Map {
    "dump_lib" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "netSession",
  },
}
`;

exports[`interpreter default scripts metaxploit.src 7`] = `
CustomString {
  "value": "metaLib",
}
`;

exports[`interpreter default scripts metaxploit.src 8`] = `
BasicInterface {
  "interface": Map {
    "lib_name" => [Function],
    "version" => [Function],
    "overflow" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "exploits" => Array [
      Object {
        "action": 1,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "ssh",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [
          6,
          2,
        ],
        "sector": "h6yi3i6ym4",
        "user": 1,
      },
      Object {
        "action": 3,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "ssh",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [
          4,
        ],
        "sector": "iahh3g6ohi",
        "user": 0,
      },
      Object {
        "action": 0,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "ssh",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [
          2,
          3,
          4,
        ],
        "sector": "t5l9ml3dvg",
        "user": 0,
      },
      Object {
        "action": 0,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "ssh",
        "memAddress": "0x33BC9555",
        "remote": false,
        "required": Array [
          2,
          1,
        ],
        "sector": "d64lu1atp5",
        "user": 2,
      },
      Object {
        "action": 3,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "ssh",
        "memAddress": "0x48096032",
        "remote": false,
        "required": Array [
          5,
          3,
        ],
        "sector": "l2nr1zvbf9",
        "user": 0,
      },
      Object {
        "action": 0,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "ssh",
        "memAddress": "0x48096032",
        "remote": false,
        "required": Array [
          2,
          3,
        ],
        "sector": "eta8rgjtuq",
        "user": 0,
      },
      Object {
        "action": 3,
        "details": "loop in array",
        "folder": Array [
          "home",
          "guest",
        ],
        "library": "ssh",
        "memAddress": "0x48096032",
        "remote": false,
        "required": Array [
          0,
          6,
          3,
        ],
        "sector": "f12a7l3rrk",
        "user": 0,
      },
    ],
    "classID" => "metaLib",
  },
}
`;

exports[`interpreter default scripts metaxploit.src 9`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "0x33BC9555",
    },
    CustomString {
      "value": "0x48096032",
    },
  ],
}
`;

exports[`interpreter default scripts metaxploit.src 10`] = `
CustomString {
  "value": "loop in array <b>mslubssnoe</b>. Buffer overflow.
* 1337 computers using this router as gateway.
* Using namespace <b>net.so</b> compiled at version <b>1.0.0.0</b>
loop in array <b>b01jydhrcf</b>. Buffer overflow.
* Using namespace <b>net.so</b> compiled at version <b>1.0.0.0</b>
* Checking an active user.
loop in array <b>sjw2b8l8js</b>. Buffer overflow.
* Checking root active user.
* 1337 port forwarding configured from router to the target computer.
* Checking an active user.
loop in array <b>fw5ynq2637</b>. Buffer overflow.
loop in array <b>u19jo65mfl</b>. Buffer overflow.
* Checking root active user.",
}
`;

exports[`interpreter default scripts metaxploit.src 11`] = `
CustomString {
  "value": "No yet supported",
}
`;

exports[`interpreter default scripts metaxploit.src 12`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts metaxploit.src 13`] = `
CustomList {
  "slice": [Function],
  "value": Array [],
}
`;

exports[`interpreter default scripts metaxploit.src 14`] = `
CustomString {
  "value": "crypto",
}
`;

exports[`interpreter default scripts metaxploit.src 15`] = `
CustomString {
  "value": "1.0.0.0",
}
`;

exports[`interpreter default scripts metaxploit.src 16`] = `
CustomString {
  "value": "Invalid args",
}
`;

exports[`interpreter default scripts metaxploit.src 17`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts metaxploit.src 18`] = `
BasicInterface {
  "interface": Map {
    "connect_service" => [Function],
    "scp" => [Function],
    "build" => [Function],
    "launch" => [Function],
    "ping" => [Function],
    "masterkey" => [Function],
    "masterkey_direct" => [Function],
    "restore_network" => [Function],
    "start_terminal" => [Function],
    "host_computer" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "shell",
  },
}
`;

exports[`interpreter default scripts mkdir.src 1`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts mkdir.src 2`] = `
CustomString {
  "value": "mkdir: permission denied",
}
`;

exports[`interpreter default scripts router.src 1`] = `
CustomString {
  "value": "router",
}
`;

exports[`interpreter default scripts router.src 2`] = `
BasicInterface {
  "interface": Map {
    "public_ip" => [Function],
    "local_ip" => [Function],
    "ping_port" => [Function],
    "port_info" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "router",
  },
}
`;

exports[`interpreter default scripts router.src 3`] = `
CustomString {
  "value": "router",
}
`;

exports[`interpreter default scripts router.src 4`] = `
BasicInterface {
  "interface": Map {
    "public_ip" => [Function],
    "local_ip" => [Function],
    "ping_port" => [Function],
    "port_info" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "router",
  },
}
`;

exports[`interpreter default scripts router.src 5`] = `
CustomString {
  "value": "142.32.54.56",
}
`;

exports[`interpreter default scripts router.src 6`] = `
CustomString {
  "value": "192.168.1.1",
}
`;

exports[`interpreter default scripts router.src 7`] = `
BasicInterface {
  "interface": Map {
    "get_lan_ip" => [Function],
    "is_closed" => [Function],
    "port_number" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "port" => 22,
    "isClosed" => false,
    "service" => "ssh",
    "classID" => "port",
  },
}
`;

exports[`interpreter default scripts router.src 8`] = `
CustomString {
  "value": "22 false ssh",
}
`;

exports[`interpreter default scripts shell.src 1`] = `
CustomString {
  "value": "shell",
}
`;

exports[`interpreter default scripts shell.src 2`] = `
BasicInterface {
  "interface": Map {
    "connect_service" => [Function],
    "scp" => [Function],
    "build" => [Function],
    "launch" => [Function],
    "ping" => [Function],
    "masterkey" => [Function],
    "masterkey_direct" => [Function],
    "restore_network" => [Function],
    "start_terminal" => [Function],
    "host_computer" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "shell",
  },
}
`;

exports[`interpreter default scripts shell.src 3`] = `
CustomString {
  "value": "computer",
}
`;

exports[`interpreter default scripts shell.src 4`] = `
BasicInterface {
  "interface": Map {
    "get_ports" => [Function],
    "File" => [Function],
    "create_folder" => [Function],
    "is_network_active" => [Function],
    "touch" => [Function],
    "show_procs" => [Function],
    "network_devices" => [Function],
    "change_password" => [Function],
    "create_user" => [Function],
    "delete_user" => [Function],
    "create_group" => [Function],
    "delete_group" => [Function],
    "groups" => [Function],
    "close_program" => [Function],
    "wifi_networks" => [Function],
    "connect_wifi" => [Function],
    "connect_ethernet" => [Function],
    "network_gateway" => [Function],
    "active_net_card" => [Function],
    "local_ip" => [Function],
    "public_ip" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "computer",
  },
}
`;

exports[`interpreter default scripts shell.src 5`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    BasicInterface {
      "interface": Map {
        "get_lan_ip" => [Function],
        "is_closed" => [Function],
        "port_number" => [Function],
      },
      "isInstance": false,
      "value": Map {
        "port" => 22,
        "isClosed" => false,
        "service" => "ssh",
        "classID" => "port",
      },
    },
  ],
}
`;

exports[`interpreter default scripts shell.src 6`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 7`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts shell.src 8`] = `
BasicInterface {
  "interface": Map {
    "chmod" => [Function],
    "copy" => [Function],
    "move" => [Function],
    "rename" => [Function],
    "path" => [Function],
    "parent" => [Function],
    "name" => [Function],
    "get_content" => [Function],
    "set_content" => [Function],
    "is_binary" => [Function],
    "is_folder" => [Function],
    "has_permission" => [Function],
    "delete" => [Function],
    "get_folders" => [Function],
    "get_files" => [Function],
    "permissions" => [Function],
    "owner" => [Function],
    "set_owner" => [Function],
    "group" => [Function],
    "set_group" => [Function],
    "size" => [Function],
    "meta_info" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "file",
  },
}
`;

exports[`interpreter default scripts shell.src 9`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts shell.src 10`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 11`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts shell.src 12`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 13`] = `
CustomString {
  "value": "USER PID CPU MEM COMMAND
root 2134 0.0% 13.37% kernel_task
root 1864 0.0% 4.20% Xorg",
}
`;

exports[`interpreter default scripts shell.src 14`] = `
CustomString {
  "value": "wlan0 38dr2pis true",
}
`;

exports[`interpreter default scripts shell.src 15`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 16`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 17`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 18`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 19`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 20`] = `
CustomString {
  "value": "",
}
`;

exports[`interpreter default scripts shell.src 21`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 22`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    CustomString {
      "value": "C6:35:EA:25:3A:4C 70% test-network",
    },
  ],
}
`;

exports[`interpreter default scripts shell.src 23`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts shell.src 24`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 25`] = `
CustomString {
  "value": "192.168.0.2",
}
`;

exports[`interpreter default scripts shell.src 26`] = `
CustomString {
  "value": "WIFI",
}
`;

exports[`interpreter default scripts shell.src 27`] = `
CustomString {
  "value": "192.168.0.2",
}
`;

exports[`interpreter default scripts shell.src 28`] = `
CustomString {
  "value": "142.32.54.56",
}
`;

exports[`interpreter default scripts shell.src 29`] = `
CustomString {
  "value": "file",
}
`;

exports[`interpreter default scripts shell.src 30`] = `
BasicInterface {
  "interface": Map {
    "chmod" => [Function],
    "copy" => [Function],
    "move" => [Function],
    "rename" => [Function],
    "path" => [Function],
    "parent" => [Function],
    "name" => [Function],
    "get_content" => [Function],
    "set_content" => [Function],
    "is_binary" => [Function],
    "is_folder" => [Function],
    "has_permission" => [Function],
    "delete" => [Function],
    "get_folders" => [Function],
    "get_files" => [Function],
    "permissions" => [Function],
    "owner" => [Function],
    "set_owner" => [Function],
    "group" => [Function],
    "set_group" => [Function],
    "size" => [Function],
    "meta_info" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "file",
  },
}
`;

exports[`interpreter default scripts shell.src 31`] = `
CustomString {
  "value": "No write permissions",
}
`;

exports[`interpreter default scripts shell.src 32`] = `
CustomString {
  "value": "No read permissions",
}
`;

exports[`interpreter default scripts shell.src 33`] = `
CustomString {
  "value": "No read permissions",
}
`;

exports[`interpreter default scripts shell.src 34`] = `
CustomString {
  "value": "No write permissions",
}
`;

exports[`interpreter default scripts shell.src 35`] = `
CustomString {
  "value": "/root",
}
`;

exports[`interpreter default scripts shell.src 36`] = `
BasicInterface {
  "interface": Map {
    "chmod" => [Function],
    "copy" => [Function],
    "move" => [Function],
    "rename" => [Function],
    "path" => [Function],
    "parent" => [Function],
    "name" => [Function],
    "get_content" => [Function],
    "set_content" => [Function],
    "is_binary" => [Function],
    "is_folder" => [Function],
    "has_permission" => [Function],
    "delete" => [Function],
    "get_folders" => [Function],
    "get_files" => [Function],
    "permissions" => [Function],
    "owner" => [Function],
    "set_owner" => [Function],
    "group" => [Function],
    "set_group" => [Function],
    "size" => [Function],
    "meta_info" => [Function],
  },
  "isInstance": false,
  "value": Map {
    "classID" => "file",
  },
}
`;

exports[`interpreter default scripts shell.src 37`] = `
CustomString {
  "value": "root",
}
`;

exports[`interpreter default scripts shell.src 38`] = `
CustomNil {
  "value": null,
}
`;

exports[`interpreter default scripts shell.src 39`] = `
CustomString {
  "value": "No write permissions",
}
`;

exports[`interpreter default scripts shell.src 40`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 41`] = `
CustomBoolean {
  "value": true,
}
`;

exports[`interpreter default scripts shell.src 42`] = `
CustomBoolean {
  "value": false,
}
`;

exports[`interpreter default scripts shell.src 43`] = `
CustomString {
  "value": "No write permissions",
}
`;

exports[`interpreter default scripts shell.src 44`] = `
CustomList {
  "slice": [Function],
  "value": Array [
    BasicInterface {
      "interface": Map {
        "chmod" => [Function],
        "copy" => [Function],
        "move" => [Function],
        "rename" => [Function],
        "path" => [Function],
        "parent" => [Function],
        "name" => [Function],
        "get_content" => [Function],
        "set_content" => [Function],
        "is_binary" => [Function],
        "is_folder" => [Function],
        "has_permission" => [Function],
        "delete" => [Function],
        "get_folders" => [Function],
        "get_files" => [Function],
        "permissions" => [Function],
        "owner" => [Function],
        "set_owner" => [Function],
        "group" => [Function],
        "set_group" => [Function],
        "size" => [Function],
        "meta_info" => [Function],
      },
      "isInstance": false,
      "value": Map {
        "classID" => "file",
      },
    },
    BasicInterface {
      "interface": Map {
        "chmod" => [Function],
        "copy" => [Function],
        "move" => [Function],
        "rename" => [Function],
        "path" => [Function],
        "parent" => [Function],
        "name" => [Function],
        "get_content" => [Function],
        "set_content" => [Function],
        "is_binary" => [Function],
        "is_folder" => [Function],
        "has_permission" => [Function],
        "delete" => [Function],
        "get_folders" => [Function],
        "get_files" => [Function],
        "permissions" => [Function],
        "owner" => [Function],
        "set_owner" => [Function],
        "group" => [Function],
        "set_group" => [Function],
        "size" => [Function],
        "meta_info" => [Function],
      },
      "isInstance": false,
      "value": Map {
        "classID" => "file",
      },
    },
    BasicInterface {
      "interface": Map {
        "chmod" => [Function],
        "copy" => [Function],
        "move" => [Function],
        "rename" => [Function],
        "path" => [Function],
        "parent" => [Function],
        "name" => [Function],
        "get_content" => [Function],
        "set_content" => [Function],
        "is_binary" => [Function],
        "is_folder" => [Function],
        "has_permission" => [Function],
        "delete" => [Function],
        "get_folders" => [Function],
        "get_files" => [Function],
        "permissions" => [Function],
        "owner" => [Function],
        "set_owner" => [Function],
        "group" => [Function],
        "set_group" => [Function],
        "size" => [Function],
        "meta_info" => [Function],
      },
      "isInstance": false,
      "value": Map {
        "classID" => "file",
      },
    },
    BasicInterface {
      "interface": Map {
        "chmod" => [Function],
        "copy" => [Function],
        "move" => [Function],
        "rename" => [Function],
        "path" => [Function],
        "parent" => [Function],
        "name" => [Function],
        "get_content" => [Function],
        "set_content" => [Function],
        "is_binary" => [Function],
        "is_folder" => [Function],
        "has_permission" => [Function],
        "delete" => [Function],
        "get_folders" => [Function],
        "get_files" => [Function],
        "permissions" => [Function],
        "owner" => [Function],
        "set_owner" => [Function],
        "group" => [Function],
        "set_group" => [Function],
        "size" => [Function],
        "meta_info" => [Function],
      },
      "isInstance": false,
      "value": Map {
        "classID" => "file",
      },
    },
  ],
}
`;

exports[`interpreter default scripts shell.src 45`] = `
CustomList {
  "slice": [Function],
  "value": Array [],
}
`;

exports[`interpreter default scripts shell.src 46`] = `
CustomString {
  "value": "root",
}
`;

exports[`interpreter default scripts shell.src 47`] = `
CustomString {
  "value": "No write permissions",
}
`;

exports[`interpreter default scripts shell.src 48`] = `
CustomString {
  "value": "test-group",
}
`;

exports[`interpreter default scripts shell.src 49`] = `
CustomString {
  "value": "Not yet supported",
}
`;

exports[`interpreter default scripts shell.src 50`] = `
CustomNumber {
  "value": 1337,
}
`;

exports[`interpreter default scripts shell.src 51`] = `
CustomNil {
  "value": null,
}
`;
